# cookbook

./: .gitignore  CMakeLists.txt  README.md
src/: Cookbook.cpp  Cookbook.h  Node.h  Recipe.h  RecipeList.cpp  RecipeList.h  RecipeListTest.cpp  t.cpp  test.cpp
src/nytScraper/: scraper.py
src/scrapers/: nytScraper.py
